--- a/misc.616/dtb/sun50i-h616-t95.dts
+++ b/misc.616/dtb/sun50i-h616-t95.dts
@@ -5430,14 +5430,14 @@
 
 		opp@1344000000 {
 			opp-hz = <0x0 0x501bd000>;
-			opp-microvolt = <0x10c8e0>;
+			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 			opp-supported-hw = <0x3>;
 		};
 
 		opp@1512000000 {
 			opp-hz = <0x0 0x5a1f4a00>;
-			opp-microvolt = <0x10c8e0>;
+			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
@@ -5445,7 +5445,7 @@
 
 		opp@1608000000 {
 			opp-hz = <0x0 0x5fd82200>;
-			opp-microvolt = <0x10c8e0>;
+			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
@@ -5454,7 +5454,7 @@
 
 		opp-1704000000 {
 			opp-hz = <0x0 0x6590fa00>;
-			opp-microvolt = <0x10c8e0>;
+			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
@@ -5463,7 +5463,7 @@
 
 		opp-1800000000 {
 			opp-hz = <0x0 0x6b49d200>;
-			opp-microvolt = <0x10c8e0>;
+			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
