--- a/misc.616/dtb/sun50i-h616-t95.dts
+++ b/misc.616/dtb/sun50i-h616-t95.dts
@@ -5452,7 +5452,7 @@
 			status = "disabled";
 		};
 
-		opp-1704000000 {
+		opp@1704000000 {
 			opp-hz = <0x0 0x6590fa00>;
 			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
@@ -5461,12 +5461,28 @@
 			status = "disabled";
 		};
 
-		opp-1800000000 {
+		opp@1800000000 {
 			opp-hz = <0x0 0x6b49d200>;
 			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
+			status = "disabled";
+		};
+
+		opp@1896000000 {
+			opp-hz = <0x0 1896000000>;
+			opp-microvolt = <0x11b340>;
+			clock-latency-ns = <0x3b9b0>;
+			opp-supported-hw = <0x4>;
+			status = "disabled";
+		};
+
+		opp@1992000000 {
+			opp-hz = <0x0 1992000000>;
+			opp-microvolt = <0x11b340>;
+			clock-latency-ns = <0x3b9b0>;
+			opp-supported-hw = <0x4>;
 			status = "disabled";
 		};
 	};
