--- a/misc.616/dtb/sun50i-h616-tx6s.dts
+++ b/misc.616/dtb/sun50i-h616-tx6s.dts
@@ -3506,8 +3506,7 @@
 			pinctrl-2 = <0x92>;
 			max-frequency = <0x8f0d180>;
 			bus-width = <0x4>;
-//			cd-gpios = <0x53 0x8 0x10 0x6 0x1 0x3 0xffffffff>;
-// looks like the sd card change detection does not work
+			cd-gpios = <0x53 0x8 0x10 0x6 0x1 0x3 0xffffffff>;
 			cap-sd-highspeed;
 			cap-wait-while-busy;
 			no-sdio;
@@ -5464,7 +5463,7 @@
 			status = "disabled";
 		};
 
-		opp-1704000000 {
+		opp@1704000000 {
 			opp-hz = <0x0 0x6590fa00>;
 			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
@@ -5473,12 +5472,28 @@
 			status = "disabled";
 		};
 
-		opp-1800000000 {
+		opp@1800000000 {
 			opp-hz = <0x0 0x6b49d200>;
 			opp-microvolt = <0x111700>;
 			clock-latency-ns = <0x3b9b0>;
 //			opp-supported-hw = <0x1>;
 			opp-supported-hw = <0x3>;
+			status = "disabled";
+		};
+
+		opp@1896000000 {
+			opp-hz = <0x0 1896000000>;
+			opp-microvolt = <0x11b340>;
+			clock-latency-ns = <0x3b9b0>;
+			opp-supported-hw = <0x4>;
+			status = "disabled";
+		};
+
+		opp@1992000000 {
+			opp-hz = <0x0 1992000000>;
+			opp-microvolt = <0x11b340>;
+			clock-latency-ns = <0x3b9b0>;
+			opp-supported-hw = <0x4>;
 			status = "disabled";
 		};
 	};
